   can't subclass HttpServer directly (Jetty 6 server and Servlet server).
 - Rewrote the tutorial part 11 (Maplets and hierarchical URIs) to follow the best practice of not subclassing DefaultMaplet. This is also more consistent 
   with the part 12 using the fluent builders. Suggested by Bill Morone.
 
1.0 beta 14 (2006-06-02)
 - Adjusted build.properties so that default values work directly.
 - Refactored the usage of parameter lists by using a new ParameterList (implementing List<Parameter>) and adding helper methods.
 - Form now derives from ParameterList.
 - ConnectorCall.getRequestHeaders() and getResponseHeaders() now return a ParameterList, other helper methods removed.
 - Added urlEncode() on Parameter.
 - Reference now sets new scheme names in lower case to respect normalization rules.
 - Added more unit tests for the Resltet API; Contributed by Lars Heuer.
 - Fixed bug in Jetty 5 HTTPS connector preventing the usage of the specified SSL keystore in certain cases. Found by Dave Pawson.
 - Added constructors to DefaultServer using the protocol's default port
 
1.0 beta 13 (2006-05-29)
 - Updated StringTemplate and StringTemplateRepresentation to allow the usage of different delimiters for variable insertion and instructions 
   like conditions. The goal is to prevent conflict between variable names and (future) instruction names.
   Now the delimiters must be different and default to ${variableName} and #[if test1]...#[else if test2]...#[else]...#[end].
   WARNING: this has a potential impact on existing application using the old delimiters for instructions such as for the 
   RedirectResltet target URI pattern.
 - Added support for single quotes to delimit the variable names in CallModel instances. Prevents the needs for double quote escaping in Java strings.
 - Enhanced the Reference to strictly conform to the URI RFC 3896. New methods, normalization code, resolution of relative URIs and relativization.