@@ -32,7 +32,7 @@ import com.noelios.restlet.data.FileReference;
  * Restlet supported by a directory of files. An automatic content negotiation mechanism 
  * (similar to Apache HTTP server) is used for files serving.
  * @see com.noelios.restlet.impl.FileClient
- * @see com.noelios.restlet.FileResource
+ * @see com.noelios.restlet.ContextResource
  * @see <a href="http://www.restlet.org/tutorial#part06">Tutorial: Serving static files</a>
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
