@@ -1,113 +1,0 @@
-/*
- * Copyright 2005-2006 Noelios Consulting.
- *
- * The contents of this file are subject to the terms
- * of the Common Development and Distribution License
- * (the "License").  You may not use this file except
- * in compliance with the License.
- *
- * You can obtain a copy of the license at
- * http://www.opensource.org/licenses/cddl1.txt
- * See the License for the specific language governing
- * permissions and limitations under the License.
- *
- * When distributing Covered Code, include this CDDL
- * HEADER in each file and include the License file at
- * http://www.opensource.org/licenses/cddl1.txt
- * If applicable, add the following below this CDDL
- * HEADER, with the fields enclosed by brackets "[]"
- * replaced with your own identifying information:
- * Portions Copyright [yyyy] [name of copyright owner]
- */
-
-package com.noelios.restlet;
-
-import org.restlet.AbstractRestlet;
-import org.restlet.Call;
-import org.restlet.component.Component;
-import org.restlet.data.MediaType;
-import org.restlet.data.Statuses;
-
-import com.noelios.restlet.data.FileRepresentation;
-
-/**
- * Restlet supported by a single file.
- * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
- */
-public class FileRestlet extends AbstractRestlet
-{
-   /** The file's path. */
-   private String filePath;
-
-   /** The file's media type. */
-   private MediaType mediaType;
-   
-   /** Indicates the time to live for a file representation before it expires (in seconds; default to 10 minutes). */
-   protected int timeToLive;
-
-   /**
-    * Constructor.
-    * @param parent The parent component.
-    * @param filePath The file's path.
-    * @param mediaType The file's media type.
-    */
-   public FileRestlet(Component parent, String filePath, MediaType mediaType)
-   {
-      super(parent);
-      this.filePath = filePath;
-      this.mediaType = mediaType;
-      this.timeToLive = 600;
-   }
-
-   /**
-    * Returns the file's media type.
-    * @return The file's media type.
-    */
-   public MediaType getMediaType()
-   {
-      return mediaType;
-   }
-
-   /**
-    * Returns the file's path.
-    * @return The file's path.
-    */
-   public String getPath()
-   {
-      return filePath;
-   }
-
-   /**
-    * Returns the time to live for a file representation before it expires (in seconds).
-    * @return The time to live for a file representation before it expires (in seconds).
-    */
-   public int getTimeToLive()
-   {
-      return this.timeToLive;
-   }
-
-   /**
-    * Sets the time to live for a file representation before it expires (in seconds).
-    * @param ttl The time to live for a file representation before it expires (in seconds).
-    */
-   public void setTimeToLive(int ttl)
-   {
-      this.timeToLive = ttl;
-   }
-
-   /**
-    * Handles a GET call.
-    * @param call The call to handle.
-    */
-   public void handleGet(Call call)
-   {
-      if(call.getResourcePath().equals(""))
-      {
-         call.setOutput(new FileRepresentation(getPath(), getMediaType(), getTimeToLive()));
-      }
-      else
-      {
-         call.setStatus(Statuses.CLIENT_ERROR_NOT_FOUND);
-      }
-   }
-}
